k8s/80.backend.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wikiwars
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      name: backend
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: backend
          image: harbor.codingpacer.fr/prod/wikiwars-backend:_GITHUB_INJECTED
          ports:
            - containerPort: 5000
          command: ["gunicorn", "-k", "geventwebsocket.gunicorn.workers.GeventWebSocketWorker", "-b", "0.0.0.0:5000", "--workers", "1", "--threads", "400", "manage:app"]
