k8s/81.worker.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: wikiwars
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      name: worker
      labels:
        app: worker
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: worker
          image: harbor.codingpacer.fr/prod/wikiwars-worker:_GITHUB_INJECTED
          command: ["python", "manage.py", "--app=manage:app", "run_worker"]
