k8s/82.database.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: wikiwars
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      name: database
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: database
