k8s/84.redis.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: wikiwars
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: redis
          image: redis:6.2-alpine
          ports:
            - containerPort: 80
