k8s/20.backend.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: wikiwars
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5000
