k8s/22.database.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: wikiwars
  labels:
    app: database
spec:
  selector:
    app: database
  ports:
    - port: 5432
