k8s/23.front.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: wikiwars
  labels:
    app: front
spec:
  selector:
    app: front
  ports:
    - port: 80
