k8s/24.redis.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: wikiwars
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
